MonetDB5/tests/BugReports/Tests/no.166.mal
# Monet Mil to Mal compiler
#include mil;
# Copyright (c) 2001-2004, CWI. All rights reserved.

#Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#use the "mil_schema" for additional support routines
#	mil.line("# >Number:         166\n");
#	mil.line("# >Category:       MIL\n");
#	mil.line("# >Synopsis:       loading module enum in a block, proc or batloop fails\n");
#	mil.line("# >Confidential:   no\n");
#	mil.line("# >Severity:       serious\n");
#	mil.line("# >Priority:       medium\n");
#	mil.line("# >Responsible:    boncz (Peter Boncz)\n");
#	mil.line("# >State:          open\n");
#	mil.line("# >Class:          sw-bug\n");
#	mil.line("# >Submitter-Id:   unknown\n");
#	mil.line("# >Arrival-Date:   Thu Aug 13 17:51:39 1998\n");
#	mil.line("# >Originator:     manegold@cwi.nl\n");
#	mil.line("# >Organization:\n");
#	mil.line("# CWI\n");
#	mil.line("# >Release:        980101\n");
#	mil.line("# >Environment:\n");
#	mil.line("# any\n");
#	mil.line("# >Description:\n");
#	mil.line("# loading module enum in a block, proc or batloop\n");
#	mil.line("# stops the evaluation of the very block immediately.\n");
#	mil.line("#\n");
#	mil.line("# ========\n");
#	mil.line("# test script\n");
#	mil.line("# --------\n");
#	mil.line("# loaded;\n");
#	mil.line("#\n");
#	mil.line("# {\n");
#	mil.line("# printf(\"\\nloading '%s' ... \",\"enum\");\n");
#	mil.line("# module(\"enum\");\n");
#	mil.line("# printf(\"done.\\n\\n\");\n");
#	mil.line("# loaded;\n");
#	mil.line("# printf(\"\\ndropping '%s' ... \",\"enum\");\n");
#	mil.line("# drop(\"enum\");\n");
#	mil.line("# printf(\"done.\\n\\n\");\n");
#	mil.line("# loaded;\n");
#	mil.line("# }\n");
#	mil.line("#\n");
#	mil.line("# quit;\n");
#	mil.line("#\n");
#	mil.line("# ========\n");
#	mil.line("# output\n");
#	mil.line("# --------\n");
#	mil.line("# loaded;\n");
#	mil.line("# #---------------------------------#\n");
#	mil.line("# # module        | usage_count     #\n");
#	mil.line("# #---------------------------------#\n");
#	mil.line("# [ \"kernel\",       1               ]\n");
#	mil.line("# [ \"arith\",        1               ]\n");
#	mil.line("# [ \"bat\",          1               ]\n");
#	mil.line("# [ \"algebra\",      1               ]\n");
#	mil.line("# [ \"sys\",          1               ]\n");
#	mil.line("# [ \"trans\",        1               ]\n");
#	mil.line("#\n");
#	mil.line("# {\n");
#	mil.line("# printf(\"\\nloading '%s' ... \",\"enum\");\n");
#	mil.line("# module(\"enum\");\n");
#	mil.line("# printf(\"done.\\n\\n\");\n");
#	mil.line("# loaded;\n");
#	mil.line("# printf(\"\\ndropping '%s' ... \",\"enum\");\n");
#	mil.line("# drop(\"enum\");\n");
#	mil.line("# printf(\"done.\\n\\n\");\n");
#	mil.line("# loaded;\n");
#	mil.line("# }\n");
#	mil.line("#\n");
#	mil.line("# loading 'enum' ... \n");
#	mil.line("# quit;\n");
#	mil.line("#\n");
#	mil.line("# --------\n");
#	mil.line("");
	aa_a := oid(20000000);
	ba_a := setoid(aa_a);
#	mil.line("");
	ca_a := loaded();
#	mil.line("{");
	da_a := printf("\nloading '%s' ... ","enum");
!ERROR: "printf("\nloading '%%s' ... ","enum");"
!                                                     ^
! syntax error, unexpected TOK_MODULE.
